<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_to_bank"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:text="@string/to_bank"
        app:layout_constraintBottom_toTopOf="@id/btn_to_shop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_to_shop"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:text="@string/to_shop"
        app:layout_constraintBottom_toTopOf="@id/btn_to_samokatus"
        app:layout_constraintEnd_toEndOf="@id/btn_to_bank"
        app:layout_constraintStart_toStartOf="@id/btn_to_bank"
        app:layout_constraintTop_toBottomOf="@id/btn_to_bank" />

    <Button
        android:id="@+id/btn_to_samokatus"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:text="@string/to_samokatus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/btn_to_bank"
        app:layout_constraintStart_toStartOf="@id/btn_to_bank"
        app:layout_constraintTop_toBottomOf="@id/btn_to_shop" />

</androidx.constraintlayout.widget.ConstraintLayout>